build dogs.js controller

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
         <button type="submit">LOGOUT</button>
       </a>
       <a 
-      href="/dogs/new" <%- title === 'Add Dog' ? 'class="active"' : '' %>
+      href="/dogs/new" <%- title === 'Dog Intake' ? 'class="active"' : '' %>
     ><button type="submit">ADD DOG</button></a>
     <a 
       href="/dogs" <%- title === 'All Dogs' ? 'class="active"' : '' %>
