continue troubleshoot db

--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -39,6 +39,8 @@
             <option value="fixed">Fixed</option>
             <option value="intact">Intact</option>
         </select>
+        <label for="adoptable">Adoptable:</label>
+        <input type="checkbox" id="adoptable" name="adoptable">
         <button type="submit" value="Add Dog">Add Dog</button>
     </form>
 </main>
