work on link from intake to vaccs form

--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -43,6 +43,7 @@
         <input type="checkbox" id="adoptable" name="adoptable">
         <button type="submit" value="Add Dog">Add Dog</button>
     </form>
+    <!-- <a href="/dogs/vaccines">Vaccine Form</a> -->
 </main>
 
 <%- include("../partials/footer") %>
