--- a/views/dogs/vaccines.ejs
+++ b/views/dogs/vaccines.ejs
@@ -3,8 +3,8 @@
 <%- include('../partials/nav') %>
 
 <main>
-    <h1>Vaccination Log Form</h1>
-    <form action='/dogs/<%= dog._id %>' method="POST" name='<%= dog._id %>'>
+    <h1><%= title %></h1>
+    <form action='/dogs/<%= dog._id %>' method="POST">
         <label for="parvo">Parvo Vaccine:</label>
         <input type="checkbox" id="parvo" name="parvo">
         <label for="parvoRec">Vaccine Received</label>
