build out behavior.ejs form

--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -4,5 +4,16 @@
 
 <main>
     <h1><%= title %></h1>
-    
+    <form action='/dogs/<%= dog._id %>' method="POST">
+        <label for="humans">Friendly with humans?</label>
+        <input type="checkbox" id="humans" name="humans">
+        <label for="kids">Friendly with kids?</label>
+        <input type="checkbox" id="kids" name="kids">
+        <label for="otherDogs">Good with other dogs?</label>
+        <input type="checkbox" id="otherDogs" name="otherDogs">
+        <label for="cats">Friendly with humans?</label>
+        <input type="checkbox" id="cats" name="cats">
+        <label for="houseBroken">Friendly with humans?</label>
+        <input type="checkbox" id="houseBroken" name="houseBroken">
+        <input type="number" name="energy" id="energy" min="1" max="5" placeholder="Energy Level 1 - 5:" required>
 </main>
