--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -8,7 +8,7 @@
         <label for="name">Dog's Name:</label>
         <input type="text" name="name" id="name-input" placeholder="If none given, PICK ONE!" required autocomplete="off">
         <label for="age">Age / Approximate Age:</label>
-        <input type="number" name="age" id="age-input" min="0" max="20" placeholder="If none given, guess" required autocomplete="off">
+        <input type="number" name="age" id="age-input" min="0" max="20" placeholder="If none given, guess" required>
         <label for="breed">Breed:</label>
         <select type="text" name="breed" id="breed-input" required>
             <option value="Mixed" selected>Mixed Breed</option>
@@ -28,9 +28,9 @@
             <option value="Mastiff">Mastiff</option>
         </select>
         <label for="weight">Weight:</label>
-        <input type="number" name="weight" id="weight" min="1" max="200" placeholder="Current Weight in LBS" required autocomplete="off">
+        <input type="number" name="weight" id="weight" min="1" max="200" placeholder="Current Weight in LBS" required>
         <label for="idealWeight">Ideal Weight:</label>
-        <input type="number" name="idealWeight" id="idealWeight" min="1" max="200" placeholder="Ideal Weight" required autocomplete="off">
+        <input type="number" name="idealWeight" id="idealWeight" min="1" max="200" placeholder="Ideal Weight" required">
         <label for="coat">Coat:</label>
         <input type="text" name="coat" id="coat" placeholder="Describe Coat" required autocomplete="off">
         <label for="fixed">Fertility Status</label>
