link to behavior.ejs functional

--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -49,6 +49,7 @@
         <div>Energy Level 1 - 5:</div>
         <div><%= `${dog.behavior.energy}` %> </div>
         <a href="/dogs/vaccines/<%= dog._id %>">Vaccine Form</a>
+        <a href="/dogs/behavior/<%= dog._id %>">Behavior Form</a>
     </section>
 </main>
 
