work on routes for forms

--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -16,4 +16,5 @@
         <label for="houseBroken">Friendly with humans?</label>
         <input type="checkbox" id="houseBroken" name="houseBroken">
         <input type="number" name="energy" id="energy" min="1" max="5" placeholder="Energy Level 1 - 5:" required>
+        <button type="submit">Submit</button>
 </main>
