behavior route functional

--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -4,7 +4,7 @@
 
 <main>
     <h1><%= title %></h1>
-    <form action='/dogs/<%= dog._id %>' method="POST">
+    <form action='/dogs/<%= dog._id %>/behavior' method="POST">
         <label for="humans">Friendly with humans?</label>
         <input type="checkbox" id="humans" name="humans">
         <label for="kids">Friendly with kids?</label>
