--- a/views/dogs/vaccines.ejs
+++ b/views/dogs/vaccines.ejs
@@ -4,7 +4,7 @@
 
 <main>
     <h1><%= title %></h1>
-    <form action='/dogs/<%= dog._id %>' method="POST">
+    <form action='/dogs/<%= dog._id %>/vaccines' method="POST">
         <label for="parvo">Parvo Vaccine:</label>
         <input type="checkbox" id="parvo" name="parvo">
         <label for="parvoRec">Vaccine Received</label>
