--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -11,7 +11,7 @@
         <input type="checkbox" id="kids" name="kids">
         <label for="otherDogs">Good with other dogs?</label>
         <input type="checkbox" id="otherDogs" name="otherDogs">
-        <label for="cats">Friendly with humans?</label>
+        <label for="cats">Good with cats?</label>
         <input type="checkbox" id="cats" name="cats">
         <label for="houseBroken">Friendly with humans?</label>
         <input type="checkbox" id="houseBroken" name="houseBroken">
