--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -4,5 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/101970e73c.js" crossorigin="anonymous"></script>
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
+    crossorigin="anonymous"
+    >
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <title><%= title %></title>
