dog intake form restyled with bootstrap

--- a/public/stylesheets/dogs/new.css
+++ b/public/stylesheets/dogs/new.css
@@ -1,19 +1,18 @@
-form {
+.form-group {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2, minmax(auto, 35.2rem));
+    grid-template-columns: repeat(1, minmax(auto, 25rem));
     font-size: 2rem;
 }
 
-form * {
+.form-group * {
     padding: 5px;
     border-radius: 5px;
     font-size: 2rem;
 }
 
-form > button {
+/* form > button {
     grid-column: span 2;
     width: 16rem;
     margin-left: auto;
     font-size: 2.2rem;
-}
+} */
