bootstrap formats checkboxes to buttons

--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -55,8 +55,11 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="adoptable">Adoptable:</label>
-            <input type="checkbox" id="adoptable" name="adoptable">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="adoptable" name="adoptable">Adoptable
+                </label>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary mb-2" value="Add Dog">Add Dog</button>
     </form>
