add notes section to all schemas

--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -55,6 +55,10 @@
             </select>
         </div>
         <div class="form-group">
+            <label for="generalNotes">Enter any notes:</label>
+            <textarea name="generalNotes" id="generalNotes" cols="30" rows="5"></textarea>
+        </div>
+        <div class="form-group">
             <div class="btn-group-toggle" data-toggle="buttons">
                 <label class="btn btn-secondary active">
                     <input type="checkbox" id="adoptable" name="adoptable">Adoptable
