--- a/views/dogs/behavior.ejs
+++ b/views/dogs/behavior.ejs
@@ -5,16 +5,43 @@
 <main>
     <h1><%= title %></h1>
     <form action='/dogs/<%= dog._id %>/behavior' method="POST">
-        <label for="humans">Friendly with humans?</label>
-        <input type="checkbox" id="humans" name="humans">
-        <label for="kids">Friendly with kids?</label>
-        <input type="checkbox" id="kids" name="kids">
-        <label for="otherDogs">Good with other dogs?</label>
-        <input type="checkbox" id="otherDogs" name="otherDogs">
-        <label for="cats">Good with cats?</label>
-        <input type="checkbox" id="cats" name="cats">
-        <label for="houseBroken">Friendly with humans?</label>
-        <input type="checkbox" id="houseBroken" name="houseBroken">
-        <input type="number" name="energy" id="energy" min="1" max="5" placeholder="Energy Level 1 - 5:" required>
+        <div class="form-group">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="humans" name="humans">   Friendly with humans?
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="kids" name="kids">   Friendly with kids?
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="otherDogs" name="otherDogs">Good with other dogs?
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="cats" name="cats">Good with cats?
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="checkbox" id="houseBroken" name="houseBroken">Friendly with humans?
+                </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <input type="number" name="energy" id="energy" min="1" max="5" placeholder="Energy Level 1 - 5:" required>
+        </div>
         <button type="submit">Submit</button>
 </main>
