--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -65,7 +65,7 @@
                 </label>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary mb-2" value="Add Dog">Add Dog</button>
+        <button type="submit" class="btn btn-primary mb-2" id="newDogSubmit" value="Add Dog">Add Dog</button>
     </form>
     
     <!-- <form action="/dogs" id="new-form" method="POST">
